Move CSS and JS files so that the browser can find them if / is routed to index.html

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
-# Local cashplot config
-/config.json
-
 # TODO list
 /TODO.md
 /sketches
 
-# Virtualenv
-/venv/
-
 # Node.JS
 /node_modules/
 # Compiled output
-/src/main.js
+/src/js/main.js
