Add stub input data page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,9 @@
   "globals": {
     "Plotly": true
   },
+  "parserOptions": {
+    "sourceType": "module"
+  },
   "env": {
     "browser": true,
     "node": true,
