--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "node ./tests/index.js",
     "lint": "eslint ./src/js/lib/ ./src/js/frontend/ ./tests/ --fix"
   },
+  "dependencies": {
+    "papaparse": "^5.3.0",
+    "nanoassert": "^2.0.0"
+  },
   "devDependencies": {
     "prettier-eslint": "^12.0.0",
     "eslint-config-prettier": "^8.1.0",
@@ -14,7 +18,6 @@
     "eslint-plugin-jasmine": "^4.1.2",
     "eslint-plugin-prettier": "^3.3.1",
     "jasmine": "^3.6.4",
-    "assert": "^2.0.0",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0"
   }
