--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # TODO list
 /TODO.md
-/sketches
+/sketches/
 
 # Node.JS
 /node_modules/
 # Compiled output
 /src/js/main.js
+# Generated documentation
+/doc/
