--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "papaparse": "^5.3.0",
+    "fast-deep-equal": "^3.1.0",
     "nanoassert": "^2.0.0"
   },
   "devDependencies": {
