--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "papaparse": "^5.3.0",
+    "matcher": "^4.0.0",
+    "path-browserify": "^1.0.0",
     "fast-deep-equal": "^3.1.0",
     "nanoassert": "^2.0.0"
   },
   "devDependencies": {
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-jasmine": "^4.1.2",
-    "eslint-plugin-prettier": "^3.3.1",
-    "jasmine": "^3.6.4",
-    "jsdoc": "^3.6.6",
+    "eslint-plugin-jasmine": "^4.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "jasmine": "^3.6.0",
+    "jsdoc": "^3.6.0",
     "prettier-eslint": "^12.0.0",
-    "webpack": "^5.21.2",
+    "webpack": "^5.21.0",
     "webpack-cli": "^4.5.0"
   }
 }
