--- a/package.json
+++ b/package.json
@@ -2,33 +2,22 @@
   "name": "cashplot",
   "private": true,
   "watch": {
-    "build": "src/js/**/*.js"
+    "build": {
+      "patterns": ["src"],
+      "extensions": "ts"
+    }
   },
   "scripts": {
-    "dev": "webpack && xdg-open ./src/index.html",
+    "dev": "webpack && xdg-open ./src/frontend/index.html",
     "build": "webpack",
-    "test": "node ./tests/index.js",
-    "lint": "eslint ./src/js/lib/ ./src/js/frontend/ ./src/sw.js ./tests/ --fix",
-    "doc": "jsdoc ./src/js/lib/ ./src/js/frontend/ -R ./README.md -d ./doc/",
     "watch": "npm-watch"
   },
-  "dependencies": {
-    "fast-deep-equal": "^3.1.0",
-    "matcher": "^4.0.0",
-    "nanoassert": "^2.0.0",
-    "papaparse": "^5.3.1",
-    "path-browserify": "^1.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jasmine": "^4.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jasmine": "^3.7.0",
-    "jsdoc": "^3.6.7",
-    "prettier-eslint": "^12.0.0",
-    "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.2",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
     "npm-watch": "^0.11.0"
   }
 }
