--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "watch": {
     "build": {
-      "patterns": ["src"],
+      "patterns": [
+        "src"
+      ],
       "extensions": "ts"
     }
   },
@@ -12,7 +14,9 @@
     "build": "webpack",
     "watch": "npm-watch"
   },
-  "dependencies": {},
+  "dependencies": {
+    "typed-inject": "3.0.1"
+  },
   "devDependencies": {
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
