--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
   "name": "cashplot",
   "private": true,
-  "watch": {
-    "build": {
-      "patterns": [
-        "src"
-      ],
-      "extensions": "ts"
-    }
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   },
   "scripts": {
     "dev": "webpack && xdg-open ./src/frontend/index.html",
     "build": "webpack",
-    "watch": "npm-watch"
+    "test": "jest"
   },
   "dependencies": {
-    "typed-inject": "3.0.1"
+    "typed-inject": "^3.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "jest": "^27.4.3",
+    "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
     "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1",
-    "npm-watch": "^0.11.0"
+    "webpack-cli": "^4.9.1"
   }
 }
