--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "lint": "prettier --write ."
     },
     "dependencies": {
-        "typed-inject": "^3.0.1"
+        "typed-inject": "^3.0.1",
+        "vue": "^2.6.11"
     },
     "devDependencies": {
         "@types/jest": "^27.0.3",
@@ -21,6 +22,8 @@
         "ts-jest": "^27.0.7",
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.2",
+        "vue-loader": "^15.9.3",
+        "vue-template-compiler": "^2.6.11",
         "webpack": "^5.64.4",
         "webpack-cli": "^4.9.1"
     }
