--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
     "compilerOptions": {
         "outDir": "./build/",
-        "allowJs": false,
+        "allowJs": true,
         "target": "es5",
         "module": "es6",
         "moduleResolution": "node",
-        "sourceMap": true
+        "sourceMap": true,
+        //"noEmitOnError": false, // without it, webpack wouldn't resolve vue files without extension
+        "strict": true,
+        "noImplicitThis": true
     },
-    "include": ["./src/**/*"],
+    "include": ["./src/**/*.ts", "./src/**/*.vue"],
     "exclude": ["./src/frontend"]
 }
