--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-loader": "^15.9.3",
         "vue-template-compiler": "^2.6.11",
         "webpack": "^5.64.4",
-        "webpack-cli": "^4.9.1"
+        "webpack-cli": "^4.9.1",
+        "webpack-livereload-plugin": "^3.0.2"
     }
 }
