--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/jest": "^27.0.3",
         "jest": "^27.4.3",
         "prettier": "^2.5.0",
+        "raw-loader": "^4.0.2",
         "ts-jest": "^27.0.7",
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.2",
