--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     },
     "dependencies": {
         "typed-inject": "^3.0.1",
-        "vue": "^2.6.11"
+        "vue": "^2.6.11",
+        "papaparse": "^5.3.1"
     },
     "devDependencies": {
         "@types/jest": "^27.0.3",
