--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "devDependencies": {
         "@types/jest": "^27.0.3",
+        "@types/papaparse": "^5.3.1",
         "jest": "^27.4.3",
         "prettier": "^2.5.0",
         "raw-loader": "^4.0.2",
