--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
         "lint": "prettier --write ."
     },
     "dependencies": {
+        "dayjs": "^1.10.7",
+        "papaparse": "^5.3.1",
         "typed-inject": "^3.0.1",
-        "vue": "^2.6.11",
-        "papaparse": "^5.3.1"
+        "vue": "^2.6.11"
     },
     "devDependencies": {
         "@types/jest": "^27.0.3",
