--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "papaparse": "^5.3.1",
         "reflect-metadata": "^0.1.13",
         "typed-inject": "^3.0.1",
-        "vue": "^2.6.11"
+        "vue": "^2.6.11",
+        "vue-infinite-loading": "2.4.5"
     },
     "devDependencies": {
         "@types/jest": "^27.0.3",
