--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "dev": "webpack && xdg-open ./src/frontend/index.html",
         "build": "webpack",
         "test": "jest",
-        "lint": "prettier --write ."
+        "lint": "prettier --write .",
+        "diagram": "tplant -A --input src/main.ts --output design/ClassDiagram.svg"
     },
     "dependencies": {
         "class-transformer": "^0.5.1",
@@ -35,6 +36,7 @@
         "jest": "^27.4.3",
         "prettier": "^2.5.0",
         "raw-loader": "^4.0.2",
+        "tplant": "^3.1.0",
         "ts-jest": "^27.0.7",
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.2",
