Move prettier lint config into package.json

--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
             }
         }
     },
+    "prettier": {
+        "trailingComma": "all",
+        "tabWidth": 4,
+        "semi": true,
+        "singleQuote": false
+    },
     "scripts": {
-        "dev": "webpack && xdg-open ./src/frontend/index.html",
+        "dev": "webpack && xdg-open ./public/index.html",
         "build": "webpack",
         "test": "jest",
         "lint": "prettier --write .",
