--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "test": "jest",
         "lint": "eslint src/ tests/ public/sw.js --ext .ts,.js,.vue",
         "format": "prettier --write .",
-        "diagram": "tplant -A --input src/main.ts --output design/ClassDiagram.svg"
+        "gen-diagrams": "tplant -A --input src/main.ts --output docs/diagrams/ClassDiagram.svg && plantuml docs/diagrams/ComponentDiagram.plantuml",
+        "gen-docs": "typedoc --out docs/public src/interfaces.ts src/utils.ts src/model/entities.ts"
     },
     "dependencies": {
         "class-transformer": "^0.5.1",
@@ -51,6 +52,7 @@
         "tplant": "^3.1.0",
         "ts-jest": "^27.0.7",
         "ts-loader": "^9.2.6",
+        "typedoc": "^0.22.15",
         "typescript": "^4.5.2",
         "vue-loader": "^15.9.3",
         "vue-template-compiler": "^2.6.11",
