--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
         "no-empty-function": "off",
         "@typescript-eslint/no-empty-function": "off",
         "@typescript-eslint/no-unused-vars": [
-            "error",
+            "warn",
             {
                 "varsIgnorePattern": "^_",
                 "argsIgnorePattern": "^_"
@@ -26,7 +26,8 @@
         {
             "files": ["*.vue"],
             "rules": {
-                "@typescript-eslint/no-explicit-any": "off"
+                "@typescript-eslint/no-explicit-any": "off",
+                "vue/require-v-for-key": "off"
             }
         }
     ]
