Set title and copy media to generated documentation

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "lint": "eslint src/ tests/ public/sw.js --ext .ts,.js,.vue",
         "format": "prettier --write .",
         "gen-diagrams": "tplant -A --input src/main.ts --output docs/diagrams/ClassDiagram.svg && plantuml docs/diagrams/ComponentDiagram.plantuml",
-        "gen-docs": "typedoc --out docs/public src/interfaces.ts src/utils.ts src/model/entities.ts"
+        "gen-docs": "typedoc --name CashPlot --media public/assets --out docs/public src/interfaces.ts src/utils.ts src/model/entities.ts"
     },
     "dependencies": {
         "class-transformer": "^0.5.1",
