--- a/app/package.json
+++ b/app/package.json
@@ -1,15 +1,13 @@
 {
     "name": "com.cuiter.cashplot",
     "displayName": "CashPlot",
+    "author": "Casper Uiterwijk <contact@cuiter.me>",
+    "private": true,
     "description": "Android port of the CashPlot web application",
     "scripts": {
         "configure": "cordova platform add android",
         "build": "cordova build android"
     },
-    "keywords": [
-        "ecosystem:cordova"
-    ],
-    "author": "cuiter",
     "devDependencies": {
         "cordova": "^11.0.0",
         "cordova-android": "^10.1.1",
